[REPEKA-297] Collapsable sidebar with scrollbar, fixed top bar position

--- a/src/AdminPanel/src/common/components/flag/flag.scss
+++ b/src/AdminPanel/src/common/components/flag/flag.scss
@@ -3,7 +3,6 @@
 @mixin flag-icon($flag-width) {
   display: inline-block;
   width: $flag-width + 7px;
-  vertical-align: text-bottom;
   text-align: left;
   img {
     @include shadow-z-1;
