--- a/src/AdminPanel/src/common/components/sidebar/sidebar.scss
+++ b/src/AdminPanel/src/common/components/sidebar/sidebar.scss
@@ -1,19 +1,34 @@
 @import "../../styles";
+@import "../repeka-logo/repeka-logo";
+
+$default-sidebar-width: 275px;
+$list-element-left-and-right-padding-size: 20px;
+$navigation-menu-item-icon-width: 18px;
+$collapsed-sidebar-width: 2 * $list-element-left-and-right-padding-size + $navigation-menu-item-icon-width;
+$expected-scrollbar-width: 17px;
+$default-top-bar-height: 60px;
+$default-top-bar-top-and-bottom-padding-size: 15px;
+$logo-width-and-height: 38px;
+$logo-container-padding-size: 3px;
+$logo-container-width-and-height: 2 * $logo-container-padding-size + $logo-width-and-height;
+$title-left-margin-size: 15px;
+$application-version-number-font-size: 0.25em;
+$navigation-menu-item-background-color-on-hover-when-sidebar-is-collapsed: #EEE;
+$navigation-menu-item-shadow-width: 5px;
+$fold-animation-duration: 1s;
 
 sidebar {
-  position: fixed;
-  display: block;
-  height: 100vh;
-  width: 250px;
-
-  li, a {
-    display: block;
-    white-space: normal !important;
-  }
+  display: flex;
+  flex-direction: column;
+  width: $default-sidebar-width;
+  transition: width $fold-animation-duration;
 
   .navbar {
-    background-color: $light-green !important;
-    margin-bottom: 3px !important;;
+    margin-bottom: 3px;
+    overflow: hidden;
+    &.navbar-default {
+      background-color: $light-green;
+    }
     .navbar-header {
       float: none;
     }
@@ -21,27 +36,96 @@ sidebar {
       display: block;
       width: 100%;
       font-size: 28px;
+      white-space: nowrap;
       .logo-container {
         display: inline-block;
-        width: 50px;
-        height: 50px;
-        padding: 3px;
+        width: $logo-container-width-and-height;
+        height: $logo-container-width-and-height;
+        padding: $logo-container-padding-size;
         background: white;
         border-radius: 50%;
-        margin-right: 15px;
         vertical-align: middle;
-        margin-top: -10px;
+        margin-top: ($default-top-bar-height - 2 * $default-top-bar-top-and-bottom-padding-size - $logo-container-width-and-height) / 2;
+        transition: transform $fold-animation-duration;
+        .repeka-logo {
+          @include repeka-logo($logo-width-and-height, darken(#f47920, 8%));
+        }
+      }
+      span {
+        margin-left: $title-left-margin-size;
+      }
+      version-display {
+        font-size: $application-version-number-font-size;
       }
     }
   }
 
-  .application-version {
-    width: 100%;
-    color: #CCC;
-    position: absolute;
-    bottom: 0;
-    z-index: 1000;
-    padding-left: 5px;
+  .with-overflow-scrollbar-on-the-left {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    direction: rtl;
+    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-y: overlay;
+    & > * {
+      direction: ltr;
+    }
+    & > ul {
+      margin-top: auto;
+    }
+    a {
+      width: $default-sidebar-width;
+      white-space: normal;
+    }
+  }
+
+  &.collapsed {
+    width: $collapsed-sidebar-width;
+    .logo-container {
+      transform: scale(.8) translate(-25%, 0);
+    }
+    .with-overflow-scrollbar-on-the-left {
+      @keyframes KeepWidthOfTheParent {
+        0% {
+          width: auto;
+        }
+        100% {
+          width: auto;
+        }
+      }
+      animation: KeepWidthOfTheParent $fold-animation-duration;
+      width: $default-sidebar-width + $expected-scrollbar-width + $navigation-menu-item-shadow-width;
+      nested-navigation-menu > ul {
+        width: $collapsed-sidebar-width;
+      }
+      ul:not(.navigation-menu-subitems) {
+        & > .navigation-menu-item {
+          @keyframes KeepFullWidthAndBoxShadowDisabled {
+            0% {
+              width: $default-sidebar-width;
+              box-shadow: none;
+            }
+            100% {
+              width: $default-sidebar-width;
+              box-shadow: none;
+            }
+          }
+          animation: KeepFullWidthAndBoxShadowDisabled $fold-animation-duration;
+          width: $collapsed-sidebar-width;
+          overflow: hidden;
+          &:hover {
+            width: $default-sidebar-width;
+            background-color: $navigation-menu-item-background-color-on-hover-when-sidebar-is-collapsed;
+            @include z-depth(1);
+          }
+          &:not(.expanded) {
+            & > a:hover {
+              background: inherit;
+            }
+          }
+        }
+      }
+    }
   }
 }
-
